package testgame;
syntax = "proto3";

message RollDice {
    bool dice1 = 1;
    bool dice2 = 2;
    bool dice3 = 3;
    bool dice4 = 4;
    bool dice5 = 5;
}

message CompleteTurn {
}

message Actions {
    oneof Action {
        RollDice roll_dice = 1;
        CompleteTurn complete_turn = 2;
    }
}