// awesome.proto
package testgame;
syntax = "proto3";

message ScoreCard {
    string player_id = 1;
    int32 yacht_sea = 20;
}

message DiceState
{
    int32 dice1 = 1;
    int32 dice2 = 2;
    int32 dice3 = 3;
    int32 dice4 = 4;
    int32 dice5 = 5;
}

message State {
    int32 round_number = 1;
    string current_player_id = 2;
    int32 current_player_roll_count = 3;
    DiceState dice_numbers = 4;
    repeated ScoreCard player_scores = 5;
}